--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^0.14.3",
     "react-imageloader": "^2.1.0",
     "react-router": "^2.8.1",
+    "request": "^2.75.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack-isomorphic-tools": "^2.5.8"
