--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.25.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "lodash": "^4.16.1",
     "path": "^0.12.7",
