--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 npm-debug.log
 .DS_Store
 .env
+/public/bundle.js
+/public/bundle.js.map
+/public/assets/css/webpackStyle.css
+/public/assets/css/webpackStyle.css.map
