--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/node_modules
+node_modules
 npm-debug.log
 .DS_Store
 .env
-/public/bundle.js
-/public/bundle.js.map
-/public/assets/css/webpackStyle.css
-/public/assets/css/webpackStyle.css.map
+public/bundle.js
+public/bundle.js.map
+public/assets/css/webpackStyle.css
+public/assets/css/webpackStyle.css.map
