--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.0",
     "css-loader": "^0.25.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "lodash": "^4.16.1",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "path": "^0.12.7",
     "radium": "^0.18.1",
     "react": "^0.14.3",
