--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^2.8.1",
     "react-sidebar": "^2.2.1",
     "request": "^2.75.0",
+    "sequelize": "^3.24.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack-isomorphic-tools": "^2.5.8"
