--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^0.9.0",
     "lodash": "^4.16.1",
     "morgan": "^1.7.0",
+    "mysql": "^2.11.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "path": "^0.12.7",
