--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sequelize": "^3.24.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
     "webpack-isomorphic-tools": "^2.5.8"
   },
   "devDependencies": {
