--- a/package.json
+++ b/package.json
@@ -17,16 +17,6 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "image-webpack-loader": "^2.0.0",
-    "imagemin": "^5.2.2",
-    "imagemin-gifsicle": "^5.1.0",
-    "imagemin-jpegtran": "^5.0.2",
-    "imagemin-optipng": "^5.2.1",
-    "imagemin-pngquant": "^5.0.0",
-    "imagemin-svgo": "^5.2.0",
-    "loader-utils": "^0.2.16",
     "body-parser": "^1.15.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -37,6 +27,15 @@
     "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "image-webpack-loader": "^2.0.0",
+    "imagemin": "^5.2.2",
+    "imagemin-gifsicle": "^5.1.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-pngquant": "^5.0.0",
+    "imagemin-svgo": "^5.2.0",
+    "json-loader": "^0.5.4",
+    "loader-utils": "^0.2.16",
     "lodash": "^4.16.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
