mobile resp feedback

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.16",
     "lodash": "^4.16.1",
+    "material-ui": "^0.16.0",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
@@ -49,6 +50,7 @@
     "react-imageloader": "^2.1.0",
     "react-router": "^2.8.1",
     "react-sidebar": "^2.2.1",
+    "react-tap-event-plugin": "^0.2.2",
     "request": "^2.75.0",
     "sequelize": "^3.24.3",
     "style-loader": "^0.13.1",
