getting closer to a working seeder

--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "bootDB",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql", 
+    "seederStorage": "sequelize"
   },
   "test": {
     "username": "root",
