--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "imagemin-optipng": "^5.2.1",
     "imagemin-pngquant": "^5.0.0",
     "imagemin-svgo": "^5.2.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.16",
     "lodash": "^4.16.1",
