--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "loader-utils": "^0.2.16",
     "lodash": "^4.16.1",
     "material-ui": "^0.16.0",
+    "moment": "^2.15.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
