--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "async": "^2.1.2",
     "babel-core": "^6.3.13",
     "babel-loader": "^6.2.0",
