--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "hover.css": "^2.0.2",
     "image-webpack-loader": "^2.0.0",
     "imagemin": "^5.2.2",
     "imagemin-gifsicle": "^5.1.0",
