--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.16.1",
     "material-ui": "^0.16.0",
     "moment": "^2.15.1",
+    "moment-timezone": "^0.5.7",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
